[package]
name = "gcp_auth"
version = "0.6.1"
repository = "https://github.com/hrvolapeter/gcp_auth"
description = "Google cloud platform (GCP) authentication using default and custom service accounts"
documentation = "https://docs.rs/gcp_auth/"
keywords = ["authentication", "gcp", "google"]
categories = ["asynchronous", "authentication"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
base64 = "0.13"
time = { version = "0.3.5", features = ["serde"] }
reqwest = { version = "0.11.8", default-features = false, features = ["rustls-tls", "json"] }
log = "0.4"
rustls = "0.20.2"
rustls-pemfile = "0.2.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1.1", features = ["fs", "sync"] }
url = "2"
which = "4.2"
async-trait = "0.1"
thiserror = "1.0"
dirs-next = "2.0"

[dev-dependencies]
env_logger = "0.9"
tokio = { version = "1.1", features = ["macros", "rt-multi-thread"] }
